tests/e2e/semantics/fn_return_inference_fail.story
function foo returns int
    a = "f"
    return a
